@startuml IUTicket Management System - Class Diagram
left to right direction

package "Auth" {

    class AuthController {
        -authService: AuthService
        +ssoCallback(oidc: AuthOidcDTO): AuthJwtTokenDTO
        +logout(): void
        +validateToken(jwt: AuthJwtTokenDTO): AuthResponseDTO
        +login(jwt: AuthJwtTokenDTO): UserDTO 
    }
    class AuthService {
        +exhangeToken(oidc: AuthOidcDTO): AuthJwtTokenDTO
        +validateToken(jwt: AuthJwtTokenDTO): AuthResponseDTO
        +logout(): void
        +login(jwt: AuthJwtTokenDTO): UserDTO
    }

    interface AuthSessionTokenRepository {
        +save(token: AuthSessionTokenModel): AuthSessionTokenModel
        +findByToken(id: Long): AuthSessionTokenModel
    }

    class AuthSessionTokenModel {
        -id: Long
        -token: String
        -expiresAt: DateTime
    }
}

AuthController ..> AuthService
AuthSessionTokenModel <.. AuthSessionTokenRepository
AuthSessionTokenRepository <.. AuthService

@enduml